<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SupSMS</string>

    <string name="activity_title_login">Se connecter</string>

    <string name="loading_progress">Chargement en cours</string>

    <string name="retry">Réessayer</string>
    <string name="progress">Progression</string>

    <string name="operation_ui_success">Réussi :)</string>
    <string name="operation_ui_error">Erreur :(</string>
    <string name="operation_ui_percent" formatted="false">%d %%</string>

    <string name="error_offline">Impossible de se connecter</string>
    <string name="error_fill_all_field">Veuillez remplir tout les champs</string>
    <string name="error_occured">Une erreur est survenue</string>
    <string name="error_login_incorrect">Login/Mot de passe incorrect</string>

    <string name="hint_username">Nom d\'utilisateur</string>
    <string name="hint_password">Mot de passe</string>

    <string name="bt_backup_sms">Sauvegarder les SMS</string>
    <string name="bt_backup_contacts">Sauvegarder les contacts</string>

    <string name="welcome_message">Que voulez-vous faire aujourd\'hui ?</string>

    <string name="activity_title_operation_backup_contacts">Sauvegarde des contacts</string>
    <string name="activity_title_operation_backup_sms">Sauvegarde des sms</string>

    <string name="action_settings">Settings</string>

    <string name="operation_preparing">Préparation</string>
    <string name="operation_finalizing">Finalisation</string>
    <string name="operation_finished">Terminé</string>

    <string name="operation_backup_sms_progress_retrieve_inbox">Récupération des SMS reçus</string>
    <string name="operation_backup_sms_progress_retrieve_outbox">Récupération des SMS envoyés</string>
    <string name="operation_backup_sms_progress_sending_inbox">Transmission des SMS reçus</string>
    <string name="operation_backup_sms_progress_sending_outbox">Transmission des SMS envoyés</string>
    <string name="operation_backup_contacts_progress_retrieve">Récupération des contacts</string>
    <string name="operation_backup_contacts_progress_sending">Transmission des contacts</string>

    <string name="operation_result_message_backup_sms" formatted="false">%d SMS sauvegardés</string>
    <string name="operation_result_message_backup_contacts" formatted="false">%d contacts sauvegardés</string>

    <string name="about">A propos</string>
    <string name="logout">Se deconnecter</string>

    <string name="version_info" formatted="false">Version %s</string>

    <string name="about_header">SUPINFO 3JVA - Séquence 2\n\n\nÉquipe :</string>
    <string name="about_team_members">157959 - MEIMOUN Alvin\n162520 - BODIN Quantin\n162365 - ELYAZZAOUI Ayoub\n175851 - DAHMAOUI Jalal</string>
</resources>
