<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<ImageView 
	    android:layout_width="75dp"
	    android:layout_height="75dp"
	    android:src="@drawable/ic_launcher"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/welcome_message"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        />

	<Button
	    android:id="@+id/btBackupSMS"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:text="@string/bt_backup_sms" />

	<Button
	    android:id="@+id/btBackupContacts"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"
	    android:layout_marginRight="5dp"
	    android:layout_marginTop="5dp"
	    android:text="@string/bt_backup_contacts" />
    
</LinearLayout>
