<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ivLogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/version_info"
        android:id="@+id/tvVersion"
        android:layout_marginTop="5dp"
        android:textSize="24sp"
        android:layout_below="@+id/ivLogo"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tvVersion">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvAboutHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_header"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:textColor="#222222"/>

            <TextView
                android:id="@+id/tvAboutMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_team_members"
                android:gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="#222222"/>
            </LinearLayout>

        </ScrollView>
</RelativeLayout>